# jnext

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  ChangeLog  EMULATOR-DESIGN-PLAN.md  FEATURES.md  FPGA-REPO-ANALYSIS.md  Makefile  README.md  TODO.md  version.yaml
.claude/: settings.json
.prompts/: 2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-28.md  2026-03-29.md  2026-03-31.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md
cmake/: GenerateVersion.cmake
data/: 48rom.map
demo/: .gitignore  Makefile  ay_demo.c  contention_test.c  contention_test.nex  copper_demo.c  dac_demo.c  demo.nex  demo.tap  floating_bus_test.c  floating_bus_test.nex  layer2_320x256_test.c  layer2_320x256_test.nex  layer2_640x256_test.c  layer2_640x256_test.nex  layer2_sprite_demo.c  magic_bp_demo.c  magic_port_demo.c  palette_demo.c  sprite_scaling_test.c  sprite_scaling_test.nex  tilemap_demo.c
demo/beeper_demo/: beeper_demo.c
demo/contention_test/: contention_test.c
demo/dapr-nexlib+tests/: README.md
demo/floating_bus_test/: floating_bus_test.c
demo/layer2_sprite_demo/: layer2_sprite_demo.c
demo/sprite_anchor_test/: sprite_anchor_test.c
demo/sprite_scaling_test/: Makefile
doc/: DECILOAD-TZX-LOADING.md  DEVELOPMENT-SESSIONS.md  EMULATOR-DESIGN-PLAN.md  LINUX-BUILD-DOCKER.md  MAGIC-BREAKPOINT.md  REGRESSION-TEST-SUITE.md  SDCARD-IMAGE-BOOTING.md  VIDEO-RECORDING.md  WAY-FORWARD-2026-03-31.md  WINDOWS-PORTING.md  nextzxos-boot-investigation.md
doc/analysis/: FPGA-REPO-ANALYSIS.md  FUSE-Z80-TEST-SUITE-REPORT.md  NEX-TEST-PROGRAMS.md  SDCARD-IMAGE-BOOTING.md  WAY-FORWARD-2026-03-31.md
doc/design/: AUDIO-TEST-PLAN-DESIGN.md  BACKWARD-EXECUTION.md  COMPOSITOR-TEST-PLAN-DESIGN.md  COPPER-TEST-PLAN-DESIGN.md  CTC-INTERRUPTS-TEST-PLAN-DESIGN.md  DIVMMC-SPI-TEST-PLAN-DESIGN.md  EMULATOR-DESIGN-PLAN.md  FUTURE-NEXTZXOS-BYPASS-TBBLUE-FW.md  INPUT-TEST-PLAN-DESIGN.md  (+29 more)
docker/: Dockerfile.linux  Dockerfile.windows
memory-bank/: activeContext.md
src/: main.cpp
src/audio/: CMakeLists.txt  ay_chip.cpp  ay_chip.h  beeper.cpp  beeper.h  dac.cpp  dac.h  i2s.cpp  i2s.h  mixer.cpp  mixer.h  turbosound.cpp  turbosound.h
src/core/: CMakeLists.txt  clock.cpp  clock.h  emulator.cpp  emulator.h  emulator_config.h  log.h  nex_loader.cpp  nex_loader.h  rzx.h  rzx_player.cpp  rzx_player.h  rzx_recorder.cpp  rzx_recorder.h  saveable.h  scheduler.cpp  scheduler.h  sna_loader.cpp  sna_loader.h  sna_saver.cpp  sna_saver.h  szx_loader.cpp  szx_loader.h  tap_loader.cpp  tap_loader.h  tzx_loader.cpp  tzx_loader.h  video_recorder.cpp  video_recorder.h  wav_loader.cpp  wav_loader.h
src/cpu/: CMakeLists.txt  im2.cpp  im2.h  im2_client.h  z80_cpu.cpp  z80_cpu.h  z80n_ext.cpp  z80n_ext.h  z80user.h
src/debugger/: CMakeLists.txt  audio_panel.cpp  audio_panel.h  breakpoint_panel.cpp  breakpoint_panel.h  callstack_panel.cpp  callstack_panel.h  copper_panel.cpp  copper_panel.h  cpu_panel.cpp  cpu_panel.h  debugger_manager.cpp  debugger_manager.h  debugger_window.cpp  debugger_window.h  disasm_panel.cpp  disasm_panel.h  memory_panel.cpp  memory_panel.h  mmu_panel.cpp  mmu_panel.h  nextreg_panel.cpp  nextreg_panel.h  sprite_panel.cpp  sprite_panel.h  stack_panel.cpp  stack_panel.h  video_panel.cpp  video_panel.h  watch_panel.cpp  watch_panel.h
src/gui/: CMakeLists.txt  emulator_widget.cpp  emulator_widget.h  main_window.cpp  main_window.h  qt_app.cpp  qt_app.h
src/input/: CMakeLists.txt  iomode.cpp  iomode.h  joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  md6_connector_x2.cpp  md6_connector_x2.h  membrane_stick.cpp  membrane_stick.h  mouse.cpp  mouse.h
src/peripheral/: CMakeLists.txt  copper.cpp  copper.h  ctc.cpp  ctc.h  divmmc.cpp  divmmc.h  dma.cpp  dma.h  i2c.cpp  i2c.h  nmi_source.cpp  nmi_source.h  sd_card.cpp  sd_card.h  spi.cpp  spi.h  uart.cpp  uart.h
src/save/: CMakeLists.txt
src/video/: CMakeLists.txt  layer2.cpp  layer2.h  palette.cpp  palette.h  renderer.cpp  renderer.h  sprites.cpp  sprites.h  tilemap.cpp  tilemap.h  timing.cpp  timing.h  ula.cpp  ula.h
test/: CMakeLists.txt  SUBSYSTEM-TESTS-STATUS.md  fuse_z80_test.cpp  generate-references.sh  lint-assertions.baseline  lint-assertions.sh  refresh-subsystem-status.sh  refresh-traceability-matrix.pl  refresh-traceability-matrix.py  regression.sh  regression_tests.conf  rewind_test.cpp  z80n_test.cpp
test/audio/: audio_nextreg_test.cpp  audio_port_dispatch_test.cpp  audio_test.cpp
test/compositor/: compositor_integration_test.cpp  compositor_test.cpp
test/contention/: contention_helpers.h  contention_test.cpp
test/copper/: copper_test.cpp
test/ctc/: ctc_test.cpp
test/ctc_int/: ctc_int_integration_test.cpp
test/ctc_interrupts/: ctc_interrupts_test.cpp
test/divmmc/: divmmc_test.cpp
test/dma/: dma_test.cpp
test/floating_bus/: floating_bus_test.cpp
test/fuse/: fuse_z80_test.cpp
test/input/: input_int_integration_test.cpp  input_integration_test.cpp  input_test.cpp
test/interactive/: README.md
test/layer2/: layer2_test.cpp
test/mmu/: mmu_test.cpp
test/nex/: beanbros-en-1_1.nex  celeste.nex  celeste2.nex  odemo.nex  shift.nex  trainyard-express.nex
test/nextreg/: nextreg_integration_test.cpp  nextreg_test.cpp
test/nmi/: nmi_integration_test.cpp  nmi_test.cpp
test/port/: port_test.cpp
test/rewind/: rewind_test.cpp
test/sdcard/: sdcard_test.cpp
test/sprites/: sprites_test.cpp
test/tilemap/: tilemap_test.cpp
test/tzx/: GhostlyGrange.tzx
test/uart/: uart_integration_test.cpp  uart_test.cpp
test/ula/: ula_integration_test.cpp  ula_test.cpp
test/videotiming/: videotiming_test.cpp
test/z80n/: tests.expected  tests.in
tools/: extract_bootrom.py  extract_bootrom.sh  fix-sdcard-image.sh  gen_48rom_map.py  gen_48rom_map.sh  rebuild-sdcard-image.sh
(+268 files in other folders)
